# homelab_system_controller

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  test
.github/workflows/: publish_frontend.yaml
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json
frontend/assets/: tailwind.css
frontend/src/: main.rs  service_status.rs
frontend/src/assets/: bazarr.rs  checkmark.rs  error.rs  foundry.rs  jellyfin.rs  mod.rs  prowlarr.rs  qbit.rs  radarr.rs  servatrice.rs  sonarr.rs  spinner.rs
frontend/src/hardware_status/: mod.rs  status.rs
frontend/src/services/: mod.rs  service_status.rs
frontend/src/stream/: mod.rs
hardware_observer/: Cargo.toml
hardware_observer/.cargo/: config.toml
hardware_observer/src/: logger.rs  main.rs  networking.rs  pin_context.rs  rpc.rs  web.rs
host/: Cargo.toml
host/.cargo/: config.toml
host/src/: asyncrtsp.rs  config.rs  hardware_observer_client.rs  main.rs  systemd.rs
host/src/db/: mod.rs
migrations/: 20240715134230_log_channels.sql
src/: config.rs  get_ip.rs  main.rs  status.rs
