[package]
name = "homelab_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
clokwerk = "0.4"
futures = "0.3"
systemstat = { version = "0.2", features = ["serde"] }
