[package]
name = "frontend"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
wasm-bindgen = "=0.2.97"
reqwest = "0.12"
reqwest-websocket = "0.4.4"
futures = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
