[package]
name = "hardware_observer"
edition = "2021"

[dependencies]
cyw43 = { version = "0.2.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.2.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.3", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-net = { version = "0.5.0", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }

static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
defmt = "0.3"
defmt-rtt = "0.4"
serde-json-core = "0.5.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
rand = { version = "0.8.5", default-features = false }
reqwless = { version = "0.13.0", features = ["defmt"] }
log = "0.4"
embedded-io-async = "0.6.1"

postcard = "1.1.1"
postcard-rpc = { version = "0.11.3", features = ["embassy-usb-0_3-server"] }
postcard-schema = "0.2.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }

common = { path = "../common" }

[profile.dev]
opt-level = "z"
