[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.0", features = ["macros", "process", "rt-multi-thread", "time"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
clokwerk = "0.4"
futures = "0.3"
systemstat = { version = "0.2", features = ["serde"] }
config = "0.14"
systemctl = "0.4"
axum = { version = "0.8.1", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["cors"] }
common = { path = "../common", features = ["use-std"] }
postcard-rpc = { version = "0.11.3", features = ["use-std", "raw-nusb" ] }
